# noir-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
bb/: Cargo.toml  README.md  build.rs  download_bb.sh
bb/src/: lib.rs
bb/src/barretenberg_api/: bindings.rs  mod.rs  poseidon.rs
bb/src/barretenberg_api/tests/: acir.rs
circuits/scripts/: generate-proof-artifacts.sh
noir/: Cargo copy.toml  Cargo.toml
noir/src/: lib.rs
noir/src/backends/barretenberg/: prove.rs  recursion.rs  utils.rs  verify.rs
noir/src/backends/barretenberg/srs/: mod.rs
noir/src/backends/barretenberg/tests/: mod.rs
