[package]
name = "noir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.3", package = "acir" }
acvm = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.3", package = "acvm" }
acvm_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.3", package = "acvm_blackbox_solver" }
base64 = "0.22.0"
bincode = "1.3.3"
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.3", package = "bn254_blackbox_solver" }
flate2 = "1.0.28"
hex = "0.4.3"
nargo = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.3", package = "nargo" }
reqwest = { version = "0.12.1", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = "1.0.197"
thiserror = "1.0.58"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.125"
clap = { version = "4.4.8", features = ["derive"] }

# Optional dependencies
bb = { path = "../bb", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
barretenberg = ["bb"]
android-compat = ["openssl"]
srs-downloader = ["barretenberg"]
ios-build = ["barretenberg"]
android-build = ["barretenberg", "openssl"]

[[bin]]
name = "srs_downloader"
path = "src/bin/srs_downloader.rs"
required-features = ["srs-downloader"]

[dev-dependencies]
tempfile = "3.8.1"